--- a/css/footer.css
+++ b/css/footer.css
@@ -1,6 +1,6 @@
 footer{
   width:100%;
-  height:100px;
+  height:200px;
   background: rgb(36, 36, 36);
   margin-top:70px;
 }
@@ -13,22 +13,23 @@ footer{
 }
 
 .f_logo{
-  margin-top:10px;
+  margin-top:20px;
 
 }
 
 .f_logo img{
-  width:50px;
+  width:100px;
 
 }
 
-address{
+.address{
   font-style: normal;
-  font-size:11px;
+  font-size:20px;
   color:#fff;
   font-weight:normal;
-  line-height:18px;
-  margin-top:15px;
+  line-height:30px;
+  height:100px;
+  padding-top:30px;
 }
 
 
