--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,6 @@
 header{
   width:100%;
-  height:50px;
+  height:100px;
 	position:fixed;
 	background:#fff;
 	box-shadow:1px 1px 3px rgb(156, 163, 192);
@@ -9,10 +9,13 @@ header{
 
 .logo{
   float:left;
-  margin-top:10px;
+  margin-top:18px;
   margin-left:15px;
   cursor: pointer;
+}
 
+.logo img{
+	width:300px;
 }
 
 
@@ -29,9 +32,9 @@ header{
 
 /* 햄버거메뉴 */
 .gnb{
-	width:250px;
+	width:600px;
 	height:100%;
-	background:#000000e0;
+	background:#000000e8;
 	position:fixed;
 	z-index:2000;
 	right:0;
@@ -42,57 +45,59 @@ header{
 	margin-top:100px;
 }
 .gnb .gnb_list li{
-	height:65px;
-	line-height:65px;
-	border-bottom:1px solid #436167;
+	height:165px;
+	line-height:165px;
+	border-bottom:1px solid rgb(92, 114, 103);
 }
 .gnb .gnb_list li a{
 	display:block;  
-	font-size:16px; 
-	font-size:1rem; 
+	font-size:40px; 
+	font-size:2.5rem; 
 	color:#fff; 
 	text-transform:uppercase;
-	margin-left:20px;
+	margin-left:50px;
 }
 .gnb .gnb_list li a:hover{
-	color:rgb(108, 182, 200); 
+	color:rgb(109, 159, 134); 
 	font-weight:bold;
 }
 
 .gnb .material-icons{ /* 돋보기버튼 */
 	color:#fff;
-	font-size:34px;
+	font-size:60px;
 	position: absolute;
-	top:12px;
-	left:20px;
+	top:24px;
+	left:40px;
 	cursor: pointer;
 }
 
 .gnb input{ /* 입력버튼 */
 	position: absolute;
-	top:17px;
-	left:56px;
-	width:120px;
-	height:22px;
+	top:35px;
+	left:120px;
+	width:280px;
+	height:45px;
 	background:transparent;
 	border:0;
 	border-bottom:1px solid #fff;
 	color:#fff;
+	font-size:30px;
 }
 
 
 .menu_toggle_btn{   /*메뉴토글버튼*/
 	position:absolute;
-	top:26px;
+	top:50px;
 	right:20px;
 	z-index:3000; 	
-	width:40px;
-	height:40px;
+	width:80px;
+	height:80px;
 	background:none;
 	outline:none;
 	border:none;
 	margin:0; 
 	cursor:pointer;
+/* 	border:1px solid red; */
 }
 
 .menu_toggle_btn span{    /* 가운데 x button */
@@ -105,6 +110,7 @@ header{
 	content:'';
 	transition:all 0.3s;
 	margin-left:15%;
+	margin-top: 0px;
 }
 
 .menu_toggle_btn:before,.menu_toggle_btn:after{    /* x button */
@@ -117,8 +123,13 @@ header{
 	transition:all 0.3s;
 	margin-left:15%;
 }
-.menu_toggle_btn:before{transform:translateY(-12px);}
-.menu_toggle_btn:after{transform:translateY(8px);}
+
+.menu_toggle_btn:before{
+	transform:translateY(-12px);
+}
+.menu_toggle_btn:after{
+	transform:translateY(8px);
+}
 
 /*jquery에서 불러낼 클래스 "menu-open" */
 .menu_toggle_btn.menu-open:before{transform:translateY(0px) rotate(135deg);background:#ffffff;}
