--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,7 @@
 @import url(footer.css);
 
 
+
 #wrap{
 
 }
@@ -15,7 +16,7 @@
 #visual img{
   margin-top:50px;
   width:100%;
-  height:300px;
+  height:750px;
 }
 
 section{
@@ -23,7 +24,7 @@ section{
 }
 
 #section1{
-
+  margin-top:0px;
 }
 
 #section1 ul{
@@ -33,23 +34,25 @@ section{
 }
 
 #section1 .material-icons{
-  font-size:50px;
+  font-size:150px;
   text-align:center;
-  color:rgb(17, 30, 70);
+  color:rgb(255, 147, 147);
 }
 
 
 #section1 ul li{
   width:33.3333%;
-  height:130px;
-  border:1px solid rgb(147, 155, 174);
+  height:350px;
+  border:1px solid rgb(244, 234, 230);
   display:flex;
   justify-content:center;
   align-items:center;
-  font-size:15px;
+  font-size:30px;
   text-align: center;
   font-weight:bold;
+  color:rgb(168, 114, 114);
 }
+
 
 #section2{
   margin-top:20px;
@@ -61,7 +64,7 @@ section{
 }
 
 #section3{
-  margin-top:40px;
+  margin-top:100px;
 
 }
 
@@ -69,17 +72,17 @@ section{
   background:url("../image/gallery-.png") no-repeat center center fixed;
   background-size:cover;
   width:100%;
-  height:280px;
+  height:450px;
   display:block;
 }
 
 
 #section3 h2{
-  font-size:24px;
+  font-size:50px;
   color:#fff;
   text-align:center;
   margin-top:20px;
-  line-height:280px;
+  line-height:440px;
   /* position: absolute;
   top:110px;
   left:138px; */
@@ -87,16 +90,18 @@ section{
 }
 
 #section4{
-  margin-top:40px;
+  margin-top:100px;
 
 }
 
 
 #section4 ul{
-  width:400px;
-  margin:0 auto;
+  width:95%;
   display:flex;
+  justify-content:center;
   flex-wrap:wrap;
+  margin-bottom:50px;
+  margin:20px auto 120px;
 }
 
 #section4 ul li{
@@ -105,7 +110,7 @@ section{
 
 
 #section4 ul li img{
-  width:200px;
+  width:450px;
 }
 
 
