--- a/css/sub.css
+++ b/css/sub.css
@@ -15,7 +15,7 @@ ________firstgarden________ */
 }
 
 .section_intro h2{
-  font-size:24px;
+  font-size:22px;
   font-weight:bold;
   text-align:center;
   margin:20px;
@@ -31,7 +31,7 @@ ________firstgarden________ */
   margin:20px auto;
   line-height:22px;
   text-align:center;
-  font-size:15px;
+  font-size:14px;
 }
 
 
@@ -39,7 +39,7 @@ ________firstgarden________ */
   font-size:24px;
   font-weight:bold;
   padding-left:15px;
-  padding:80px 0 30px 15px ;
+  padding:60px 0 30px 15px ;
   text-align:center;
 }
 
@@ -91,20 +91,19 @@ __________dining__________ */
 
 .subvisual1 img{
   width: 100%;
-  height:300px;
+  height:150px;
   margin-top:50px;
 }
 
 .section_dining{
   margin-top: 20px;
-
 }
 
 .section_dining h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
   padding-left:15px;
-  margin: 30px 0;
+  margin: 30px 0 40px;
 }
 
 .section_dining ul{
@@ -116,7 +115,7 @@ __________dining__________ */
 }
 
 .section_dining ul li h2{
-  font-size:34px;
+  font-size:22px;
   font-weight:bold;
   text-align:center;
   margin-bottom:20px;
@@ -130,9 +129,9 @@ __________dining__________ */
 .section_dining ul li p{
   width:80%;
   margin:20px auto;
-  line-height:38px;
+  line-height:22px;
   text-align:center;
-  font-size:28px;
+  font-size:14px;
 
 }
 
@@ -141,7 +140,7 @@ __________dining__________ */
   font-weight:bold;
   display:block;
   text-align:center;
-  font-size:27px;
+  font-size:16px;
   margin-bottom:10px; 
 }
 
@@ -152,7 +151,7 @@ __________wedding__________ */
 
 .subvisual2 img{
   width: 100%;
-  height:300px;
+  height:150px;
   margin-top:50px;
 }
 
@@ -161,7 +160,7 @@ __________wedding__________ */
 }
 
 .section_wedding h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
   padding-left:15px;
   margin: 30px 0 50px 0;
@@ -191,7 +190,8 @@ __________wedding__________ */
 
 .section_wedding ul li p{
   font-weight:bold;
-  font-size:29px;
+  font-size:16px;
+  text-align:center;
   margin-bottom:10px; 
 }
 
@@ -200,8 +200,8 @@ __________wedding__________ */
   margin:0 auto;
   font-weight:normal;
   text-align:center;
-  font-size:28px;
-  line-height: 38px;
+  font-size:14px;
+  line-height: 22px;
 }
 
 
@@ -212,7 +212,7 @@ __________theater__________ */
 
 .subvisual3 img{
   width: 100%;
-  height:300px;
+  height:150px;
   margin-top:50px;
 }
 
@@ -221,7 +221,7 @@ __________theater__________ */
 }
 
 .section_theater h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
   padding-left:15px;
   margin: 30px 0;
@@ -231,16 +231,16 @@ __________theater__________ */
   width:90%;
   margin:0 auto;
   text-align:center;
-  font-size:28px;
-  line-height:38px;
+  font-size:14px;
+  line-height:22px;
 }
 
 .section_theater table{
   margin:70px auto;
   width:100%;
-  height:180px;
+  height:140px;
   border:1px solid rgb(221, 221, 221);
-  font-size:28px;
+  font-size:15px;
   border:1px solid rgb(210, 210, 210);
 }
 
@@ -250,7 +250,7 @@ __________theater__________ */
 
 .section_theater table td{
   text-align:center;
-  font-size:28px;
+  font-size:12px;
 
 }
 
@@ -270,7 +270,7 @@ __________theater__________ */
 
 .section_theater .info{
   font-size:14px;
-  line-height:18px;
+  line-height:16px;
   margin:10px 0;
 }
 
@@ -281,7 +281,7 @@ __________theater__________ */
 
 .section_theater h3{
   font-weight:bold;
-  font-size:34px;
+  font-size:18px;
   text-align:center;
   margin:60px 0 30px;
 }
@@ -305,21 +305,21 @@ __________theater__________ */
 
 .section_theater .movietime span{
   background:rgb(67, 19, 101);
-  padding:5px 16px;
+  padding:3px 10px;
   border-radius:7px;
   color:#fff;
-  font-size:22px;
+  font-size:16px;
 
 }
 
 .section_theater .movietime input{
   margin-top:10px;
-  padding:5px 8px;
+  padding:3px 6px;
   background:#fff;
   color: rgb(52, 35, 137);
   border:1px solid rgb(52, 35, 137);
   border-radius:3px;
-  font-size:26px;
+  font-size:12px;
   font-weight:bold;
   cursor: pointer;
 }
@@ -333,9 +333,9 @@ __________theater__________ */
 .section_theater .movietime .title{
   background:none;
   color:#111;
-  font-size:24px;
+  font-size:13px;
   font-weight:bold;
-  line-height:32px;
+  line-height:18px;
 }
 
 .section_theater .movie1 img, .movie2 img{
@@ -348,8 +348,8 @@ __________theater__________ */
 }
 
 .section_theater .detail{
-  font-size:22px;
-  margin-top:40px;
+  font-size:12px;
+  margin:40px 0;
   text-align:center;
   font-weight:bold;
 
@@ -364,10 +364,10 @@ __________theater-1__________ */
 }
 
 .section_theater-1 h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
   padding-left:15px;
-  padding:140px 0 30px 15px ;
+  padding:80px 0 30px 15px ;
 }
 
 
@@ -390,21 +390,20 @@ __________theater-1__________ */
   border-bottom:1px solid rgb(153, 163, 212);
   padding:2px 0;
   color:rgb(95, 112, 187);
-  font-size:27px;
+  font-size:17px;
 }
 
 .section_theater-1 .theater1 p:nth-of-type(1){
   margin:20px 0 5px;
   text-align:left;
-  font-size:23px;
+  font-size:13px;
   font-weight:bold;
-  line-height:34px;
 }
 
 .section_theater-1 .theater1 p:nth-of-type(2){
   font-weight:bold;
-  font-size:32px;
-  line-height:34px;
+  font-size:20px;
+  line-height:24px;
   text-align:left;
 
 }
@@ -413,15 +412,13 @@ __________theater-1__________ */
   text-align:left;
   margin-top:20px;
   font-weight:bold;
-  font-size:23px;
-  line-height:34px;
+  font-size:13px;
 }
 
 .section_theater-1 .theater1 p:nth-of-type(4){
   text-align:left;
-  margin-top:20px;
-  font-size:22px;
-  line-height:28px;
+  margin:20px 0 40px;
+  font-size:12px;
 }
 
 
@@ -431,10 +428,10 @@ __________theater-1__________ */
 __________theater-2__________ */
 
 .section_theater-2 h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
   padding-left:15px;
-  padding:140px 0 30px 15px ;
+  padding:80px 0 30px 15px ;
 }
 
 
@@ -457,21 +454,20 @@ __________theater-2__________ */
   border-bottom:1px solid rgb(153, 163, 212);
   padding:2px 0;
   color:rgb(95, 112, 187);
-  font-size:27px;
+  font-size:17px;
 }
 
 .section_theater-2 .theater2 p:nth-of-type(1){
   margin:20px 0 5px;
   text-align:left;
-  font-size:23px;
+  font-size:13px;
   font-weight:bold;
-  line-height:34px;
 }
 
 .section_theater-2 .theater2 p:nth-of-type(2){
   font-weight:bold;
-  font-size:32px;
-  line-height:34px;
+  font-size:20px;
+  line-height:24px;
   text-align:left;
 
 }
@@ -480,15 +476,13 @@ __________theater-2__________ */
   text-align:left;
   margin-top:20px;
   font-weight:bold;
-  font-size:23px;
-  line-height:34px;
+  font-size:13px;
 }
 
 .section_theater-2 .theater2 p:nth-of-type(4){
   text-align:left;
-  margin-top:20px;
-  font-size:22px;
-  line-height:28px;
+  margin:20px 0 40px;
+  font-size:12px;
 }
 
 
@@ -501,9 +495,9 @@ ____________map____________ */
 }
 
 .section_map h1{
-  font-size:40px;
+  font-size:30px;
   font-weight:bold;
-  padding:140px 0 30px 15px ;
+  padding:80px 0 30px 15px ;
 
 }
 
@@ -512,14 +506,13 @@ ____________map____________ */
 }
 
 .section_map .map iframe{
-  width:90%;
-  height:600px;
+  width:94%;
+  height:300px;
 }
 
 .section_map table{
   width:90%;
   margin:30px auto;
-  font-size:26px;
 }
 
 .section_map table tr{
@@ -533,7 +526,7 @@ ____________map____________ */
 
 .section_map table td{
   padding:10px 5px;
-  line-height:36px;
+  line-height:22px;
 }
 
 .section_map table .red{
